Initial Java Upgrade changes