@@ -6,7 +6,7 @@
     <parent>
         <groupId>uk.gov.companieshouse</groupId>
         <artifactId>companies-house-parent</artifactId>
-        <version>1.3.0</version>
+        <version>2.1.5</version>
         <relativePath/>
     </parent>
 
@@ -17,40 +17,43 @@
     <packaging>jar</packaging>
 
     <properties>
-        <java.version>11</java.version>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <spring-boot-dependencies.version>2.7.8</spring-boot-dependencies.version>
-        <start-class>uk.gov.companieshouse.itemgroupworkflowapi.ItemGroupWorkflowApiApplication</start-class>
+        <java.version>21</java.version>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
 
-        <!-- Docker -->
-        <jib-maven-plugin.version>3.3.1</jib-maven-plugin.version>
-
-        <spring-boot-maven-plugin.version>2.5.5</spring-boot-maven-plugin.version>
-
-        <maven-surefire-plugin.version>3.1.0</maven-surefire-plugin.version>
-
-        <!-- log4j -->
-        <log4j.version>2.19.0</log4j.version>
-
-        <!-- Structured logging -->
-        <structured-logging.version>1.9.27</structured-logging.version>
-
-        <!-- Environment reader -->
-        <environment-reader-library.version>1.3.8</environment-reader-library.version>
-
-        <jakarta.json-api.version>2.1.2</jakarta.json-api.version>
-        <jakarta.json.version>1.1.2</jakarta.json.version>
-        <jackson.version>2.15.2</jackson.version>
-        <guava.version>32.0.0-jre</guava.version>
-        <api-sdk-java.version>4.3.30</api-sdk-java.version>
-        <kafka-models.version>1.0.39</kafka-models.version>
-        <ch-kafka.version>1.4.8</ch-kafka.version>
+        <!-- external dependencies -->
+        <guava.version>33.2.1-jre</guava.version>
+        <handlebars.version>4.4.0</handlebars.version>
+        <httpclient5.version>5.3.1</httpclient5.version>
+        <jakarta.json-api.version>2.1.3</jakarta.json-api.version>
+        <jakarta.json.version>1.1.6</jakarta.json.version>
+        <jackson.version>2.17.1</jackson.version>
+        <log4j-bom.version>2.22.1</log4j-bom.version>
+        <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
+        <spring-boot-dependencies.version>3.2.4</spring-boot-dependencies.version>
+        <spring-boot-maven-plugin.version>3.2.4</spring-boot-maven-plugin.version>
+        <spring-cloud-contract-wiremock.version>4.1.3</spring-cloud-contract-wiremock.version>
         <!-- system-rules: 1.17.2 is the latest version that works with JUnit 5.
              See https://github.com/stefanbirkner/system-rules/issues/70 -->
         <system-rules-version>1.17.2</system-rules-version>
-        <spring-cloud-contract-wiremock.version>2.2.8.RELEASE</spring-cloud-contract-wiremock.version>
-        <handlebars.version>4.3.1</handlebars.version>
+
+        <!-- internal dependencies -->
+        <api-sdk-java.version>6.0.9</api-sdk-java.version>
+        <api-security-java.version>2.0.4</api-security-java.version>
+        <ch-kafka.version>3.0.2</ch-kafka.version>
+        <environment-reader-library.version>3.0.1</environment-reader-library.version>
+        <kafka-models.version>3.0.7</kafka-models.version>
+        <structured-logging.version>3.0.8</structured-logging.version>
+
+        <!-- Docker -->
+        <jib-maven-plugin.version>3.4.1</jib-maven-plugin.version>
+
+        <argLine>
+            --add-opens java.base/java.util=ALL-UNNAMED
+            --add-opens java.base/java.lang=ALL-UNNAMED
+        </argLine>
+
+        <start-class>uk.gov.companieshouse.itemgroupworkflowapi.ItemGroupWorkflowApiApplication</start-class>
     </properties>
 
     <dependencyManagement>
@@ -62,12 +65,11 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-
             <!-- log4j -->
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-bom</artifactId>
-                <version>${log4j.version}</version>
+                <version>${log4j-bom.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -75,6 +77,12 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <!--Overriding spring-web version to remove vulnerability-->
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>6.1.6</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
@@ -90,6 +98,11 @@
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>jakarta.json</groupId>
@@ -121,13 +134,22 @@
             <artifactId>kafka-models</artifactId>
             <version>${kafka-models.version}</version>
             <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.commons</groupId>
+                    <artifactId>commons-compress</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.eclipse.jetty.http2</groupId>
+                    <artifactId>http2-common</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>uk.gov.companieshouse</groupId>
             <artifactId>ch-kafka</artifactId>
             <version>${ch-kafka.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -137,10 +159,15 @@
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka-test</artifactId>
             <scope>test</scope>
+            <version>3.0.13</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.fasterxml.jackson.module</groupId>
                     <artifactId>jackson-module-scala_2.13</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.pcollections</groupId>
+                    <artifactId>pcollections</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -161,6 +188,12 @@
             <artifactId>handlebars</artifactId>
             <version>${handlebars.version}</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.openjdk.nashorn</groupId>
+                    <artifactId>nashorn-core</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.github.jknack</groupId>
@@ -168,8 +201,6 @@
             <version>${handlebars.version}</version>
             <scope>test</scope>
         </dependency>
-
-
         <!-- Structured logging -->
         <dependency>
             <groupId>uk.gov.companieshouse</groupId>
@@ -184,25 +215,21 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
         <!-- Environment reader -->
         <dependency>
             <groupId>uk.gov.companieshouse</groupId>
             <artifactId>environment-reader-library</artifactId>
             <version>${environment-reader-library.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5</artifactId>
+            <version>${httpclient5.version}</version>
+        </dependency>
         <!-- Mongo -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
-        </dependency>
-
-        <!-- Embedded Mongo for integration testing -->
-        <dependency>
-            <groupId>de.flapdoodle.embed</groupId>
-            <artifactId>de.flapdoodle.embed.mongo</artifactId>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -211,7 +238,7 @@
         <dependency>
             <groupId>uk.gov.companieshouse</groupId>
             <artifactId>api-security-java</artifactId>
-            <version>0.4.2</version>
+            <version>${api-security-java.version}</version>
         </dependency>
     </dependencies>
 
@@ -250,8 +277,16 @@
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
                 <version>${jib-maven-plugin.version}</version>
+                <configuration>
+                    <from>
+                        <image>416670754337.dkr.ecr.eu-west-2.amazonaws.com/ci-corretto-build-21:latest</image>
+                    </from>
+                    <to>
+                        //Once the pipeline is moved to shared services need to update this to image reference from shared services
+                        <image>169942020521.dkr.ecr.eu-west-1.amazonaws.com/local/item-group-workflow-api:latest</image>
+                    </to>
+                </configuration>
             </plugin>
         </plugins>
     </build>
-
 </project>
